# node-based-image-processor

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
include/core/: Node.hpp
include/glad/: glad.h
include/nodes/: BlurNode.hpp  BrightnessNode.hpp  EdgeDetectionNode.hpp  ImageEffectNode.hpp  ImageInputNode.hpp  OutputNode.hpp  ThresholdNode.hpp
src/: main.cpp
src/nodes/: BlurNode.cpp  BrightnessNode.cpp  EdgeDetectionNode.cpp  ImageEffectNode.cpp  ImageInputNode.cpp  OutputNode.cpp  ThresholdNode.cpp
src/utils/: glad.c
